# advent-of-code

./: Cargo.toml  LICENSE  README.md
2021/1/: increments.py  windowed_increments.py
2021/10/: syntax_scoring.rs
2021/11/: dumbo_octopus.rs
2021/12/: passage_pathing.rs
2021/13/: transparent_origami.rs
2021/14/: extended_polymerization.rs
2021/15/: chiton.rs
2021/16/: packet_decoder.rs
2021/17/: trick_shot.rs
2021/18/: snailfish.rs
2021/2/: dive.rs
2021/3/: diagnostic.rs
2021/4/: bingo.rs
2021/5/: hydrotermal_venture.rs
2021/6/: lanternfish.rs
2021/7/: the_treachery_of_whales.rs
2021/8/: main.rs  seven_segment_search.rs
2021/9/: smoke_basin.rs
common/: coords.rs  lib.rs  utility.rs
