[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "2021_2_dive"
path = "2021/2/dive.rs"

[[bin]]
name = "2021_3_diagnostic"
path = "2021/3/diagnostic.rs"

[[bin]]
name = "2021_4_bingo"
path = "2021/4/bingo.rs"

[[bin]]
name = "2021_5_hydrotermal_venture"
path = "2021/5/hydrotermal_venture.rs"

[[bin]]
name = "2021_6_lanternfish"
path = "2021/6/lanternfish.rs"

[lib]
name = "common"
path = "common/lib.rs"

[dependencies]
