[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "2021_2_dive"
path = "2021/2/dive.rs"

[[bin]]
name = "2021_3_diagnostic"
path = "2021/3/diagnostic.rs"

[[bin]]
name = "2021_4_bingo"
path = "2021/4/bingo.rs"

[[bin]]
name = "2021_5_hydrotermal_venture"
path = "2021/5/hydrotermal_venture.rs"

[[bin]]
name = "2021_6_lanternfish"
path = "2021/6/lanternfish.rs"

[[bin]]
name = "2021_7_the_treachery_of_whales"
path = "2021/7/the_treachery_of_whales.rs"

[[bin]]
name = "2021_8_seven_segment_search"
path = "2021/8/seven_segment_search.rs"

[[bin]]
name = "2021_9_smoke_basin"
path = "2021/9/smoke_basin.rs"

[[bin]]
name = "2021_10_syntax_scoring"
path = "2021/10/syntax_scoring.rs"

[[bin]]
name = "2021_11_dumbo_octopus"
path = "2021/11/dumbo_octopus.rs"

[[bin]]
name = "2021_12_passage_pathing"
path = "2021/12/passage_pathing.rs"

[[bin]]
name = "2021_13_transparent_origami"
path = "2021/13/transparent_origami.rs"

[[bin]]
name = "2021_14_extended_polymerization"
path = "2021/14/extended_polymerization.rs"

[[bin]]
name = "2021_15_chiton"
path = "2021/15/chiton.rs"

[[bin]]
name = "2021_16_packet_decoder"
path = "2021/16/packet_decoder.rs"

[lib]
name = "common"
path = "common/lib.rs"

[dependencies]
